testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case3.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found 'new line character'
  ==> case3.cj:14:9:
   | 
14 |     '\u{123
   |      ~~    ^ expected '}' or hexadecimal digit
   |      |
   |      because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

error: expected '}' or hexadecimal digit in unicode escape, found 'new line character'
  ==> case3.cj:15:9:
   | 
15 |     '\u{123
   |      ~~    ^ expected '}' or hexadecimal digit
   |      |
   |      because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

2 errors generated, 2 errors printed.
